--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,13 +2,16 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+    rev: v3.4.0
     hooks:
       - id: trailing-whitespace
+        exclude: ^tests/.*/fixtures/.*
       - id: end-of-file-fixer
+        exclude: ^tests/.*/fixtures/.*
       - id: check-yaml
       - id: check-added-large-files
       - id: pretty-format-json
+        exclude: ^.vscode/.*
         args: [--autofix, --no-sort-keys]
   - repo: https://github.com/myint/autoflake
     rev: v1.4
@@ -20,16 +23,19 @@ repos:
     hooks:
       - id: black
         exclude: ^tests/snapshots/
-        args: [
-            --line-length, "90",
-            --target-version, py38
-        ]
+        args: [--line-length, '90', --target-version, py38]
   - repo: https://github.com/PyCQA/isort
-    rev: 5.6.4
+    rev: 5.7.0
     hooks:
       - id: isort
+        additional_dependencies: [toml]
         exclude: ^tests/snapshots/
-        args: [
-            --profile, black,
-            --line-length, "90"
-        ]
+        args: [--profile, black, --line-length, '90']
+  - repo: local
+    hooks:
+      - id: pytest-check
+        name: pytest-check
+        entry: pytest
+        language: system
+        pass_filenames: false
+        always_run: true
