poetry CI fix m/b
Signed-off-by: Riley <rileymshea@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,15 +36,23 @@ jobs:
         shell: bash
         run: echo ::set-output name=version::$(python -c "import sys; print('-'.join(str(v) for v in sys.version_info))")
 
-      - name: Bootstrap poetry
-        shell: bash
-        run: |
-          python -m ensurepip
-          python -m pip install --upgrade pip
-          python -m pip install .
-      - name: Configure poetry
-        shell: bash
-        run: python -m poetry config virtualenvs.in-project true
+      - name: Run image
+        uses: abatilo/actions-poetry@v2.0.0
+        with:
+          poetry-version: ${{ matrix.poetry-version }}
+      - name: View poetry --help
+        run: poetry --help
+
+      # - name: Bootstrap poetry
+      #   shell: bash
+      #   run: |
+      #     python -m ensurepip
+      #     python -m pip install --upgrade pip
+      #     python -m pip install .
+
+      # - name: Configure poetry
+      #   shell: bash
+      #   run: python -m poetry config virtualenvs.in-project true
 
       - name: Set up cache
         uses: actions/cache@v2
