--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
       matrix:
         os: [Ubuntu]
         python-version: [3.8]
+        poetry-version: [1.1.2]
+
     steps:
       - uses: actions/checkout@v2
 
