--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,24 @@
-name: Tests
+name: Main
 
 on:
   push:
     paths-ignore:
       - 'docs/**'
-      - '.cirrus.yml'
     branches:
       - master
-      - develop
-  pull_request:
-    paths-ignore:
-      - 'docs/**'
-      - '.cirrus.yml'
-    branches:
-      - '**'
 
 jobs:
+  pre-commit:
+    name: Linting
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+      - uses: pre-commit/action@v2.0.0
+        env:
+          SKIP: pytest-check
   tests:
+    needs: pre-commit
     name: ${{ matrix.os }} / ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}-latest
     strategy:
@@ -63,3 +65,15 @@ jobs:
       - name: Run pytest
         shell: bash
         run: python -m poetry run python -m pytest -v tests
+
+      - name: Build project for distribution
+        run: |
+          source $HOME/.poetry/env
+          poetry run poetry build
+
+      - name: Publish to PyPI
+        env:
+          POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
+        run: |
+          source $HOME/.poetry/env
+          poetry run poetry publish
