--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
         shell: bash
         run: |
           python -m poetry run python -m pytest -v tests
-          pytest --cov=./ --cov-report=xml
+          python -m poetry run python -m --cov=./ --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
