--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,9 @@ jobs:
     needs: pre-commit
     name: ${{ matrix.os }} / ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}-latest
+    env:
+      OS: ${{ matrix.os }}
+      PYTHON: '3.8'
     strategy:
       matrix:
         os: [Ubuntu]
@@ -70,13 +73,13 @@ jobs:
         uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage1.xml,./coverage2.xml
-          directory: ./coverage/reports/
+          files: ./coverage.xml
+          directory: ./
           flags: unittests
           env_vars: OS,PYTHON
           name: codecov-umbrella
           fail_ci_if_error: true
-          path_to_write_report: ./coverage/codecov_report.txt
+          path_to_write_report: ./codecov_report.txt
           verbose: true
 
       - name: Build project for distribution
