--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,11 +68,11 @@ jobs:
       - name: Run pytest
         shell: bash
         run: |
-          python -m poetry run python -m pytest --cov=upoly tests/ --cov-report=xml
+          python -m poetry run python -m pytest --cov=./ --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          # token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.xml
           directory: ./
           flags: unittests
