--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,19 @@ keywords = ["asyncio", "polygon", "polygonio", "python", "client-python", "http2
 
 classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
-    "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
     "Topic :: Office/Business :: Financial :: Investment",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Software Development :: Libraries",
+    "Topic :: Software Development",
+    "Typing :: Typed",
+    "Intended Audience :: Developers",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "License :: OSI Approved :: AGPL License",
 ]
 
 [tool.poetry.dependencies]
@@ -40,6 +50,8 @@ mypy = "^0.800"
 pytest-watch = "^4.2.0"
 radon = "^4.3.2"
 pytest-cov = "^2.11.1"
+pytest-asyncio = "^0.14.0"
+pytest-datadir = "^1.3.1"
 
 
 [build-system]
