--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "upoly"
-version = "0.1.16"
+version = "0.1.17"
 description = "High performance asyncio REST client for polygon.io"
 authors = ["Riley <rileymshea@gmail.com>"]
 license = "AGPL"
@@ -20,12 +20,11 @@ classifiers = [
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
     "License :: OSI Approved :: AGPL License",
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.9"
 joblib = "^1.0.0"
 python-dotenv = "^0.15.0"
 httpx = { extras = ["http2", "brotli"], version = "^0.16.1" }
@@ -52,6 +51,19 @@ radon = "^4.3.2"
 pytest-cov = "^2.11.1"
 pytest-asyncio = "^0.14.0"
 pytest-datadir = "^1.3.1"
+pytest-mock = "^3.5.1"
+cytoolz = "^0.11.0"
+pyarrow = "^2.0.0"
+matplotlib = "^3.3.3"
+fsspec = "^0.8.5"
+s3fs = "^0.5.2"
+numba = "^0.52.0"
+dask = "^2021.1.1"
+jupyter = "^1.0.0"
+jupyterlab = "^3.0.5"
+dask-labextension = "^5.0.0"
+jupyterlab-lsp = "^3.2.0"
+python-language-server = {extras = ["all"], version = "^0.36.2"}
 
 
 [build-system]
