--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "upoly"
-version = "0.1.23"
+version = "0.1.24"
 description = "High performance asyncio REST client for polygon.io"
 authors = ["Riley <rileymshea@gmail.com>"]
 license = "AGPL"
@@ -25,17 +25,20 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.9"
-joblib = "^1.0.0"
 python-dotenv = "^0.15.0"
-httpx = { extras = ["http2", "brotli"], version = "^0.16.1" }
 orjson = "^3.4.6"
-pandas = "^1.2.0"
-numpy = "^1.19.5"
 nest-asyncio = "^1.4.3"
 pandas-market-calendars = "^1.6.1"
-aiofiles = "^0.6.0"
+joblib = "^1.0.1"
+numpy = "^1.20.1"
+pandas = "^1.2.2"
+aiohttp = "^3.7.3"
+aiodns = "^2.0.0"
+Brotli = "^1.0.9"
+cchardet = "^2.1.7"
 
 [tool.poetry.dev-dependencies]
+aiofiles = "^0.6.0"
 ipykernel = "^5.4.3"
 black = "^20.8b1"
 pre-commit = "^2.9.3"
@@ -43,7 +46,6 @@ pytest = "^6.2.1"
 isort = "^5.7.0"
 rope = "^0.18.0"
 coverage = "^5.3.1"
-respx = "^0.16.3"
 mypy = "^0.800"
 pytest-watch = "^4.2.0"
 radon = "^4.3.2"
