--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       PYTHON: '${{ matrix.python-version }}'
     strategy:
       matrix:
-        os: [Ubuntu]
+        os: [ubuntu, windows, macos]
         python-version: [3.8]
         poetry-version: [1.1.2]
 
