--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,6 @@ jobs:
         env:
           SKIP: pytest-check
   tests:
-    needs: pre-commit
     name: ${{ matrix.os }} / ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}-latest
     env:
@@ -66,6 +65,8 @@ jobs:
         run: python -m poetry install
 
       - name: Run pytest
+        env:
+          POLYGON_KEY_ID: ${{secrets.POLYGON_KEY_ID}}
         shell: bash
         run: |
           python -m poetry run python -m pytest --cov=./ --cov-report=xml
