--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "upoly"
-version = "0.1.28"
+version = "0.1.29"
 description = "High performance asyncio REST client for polygon.io"
 authors = ["Riley <rileymshea@gmail.com>"]
 license = "AGPL"
@@ -39,32 +39,32 @@ cchardet = "^2.1.7"
 
 [tool.poetry.dev-dependencies]
 aiofiles = "^0.6.0"
-ipykernel = "^5.4.3"
+# ipykernel = "^5.4.3"
 black = "^20.8b1"
 pre-commit = "^2.9.3"
 pytest = "^6.2.1"
-isort = "^5.7.0"
-rope = "^0.18.0"
+# isort = "^5.7.0"
+# rope = "^0.18.0"
 coverage = "^5.3.1"
-mypy = "^0.800"
-pytest-watch = "^4.2.0"
-radon = "^4.3.2"
+# mypy = "^0.800"
+# pytest-watch = "^4.2.0"
+# radon = "^4.3.2"
 pytest-cov = "^2.11.1"
 pytest-asyncio = "^0.14.0"
 pytest-datadir = "^1.3.1"
 pytest-mock = "^3.5.1"
-cytoolz = "^0.11.0"
-pyarrow = "^2.0.0"
-matplotlib = "^3.3.3"
-fsspec = "^0.8.5"
-s3fs = "^0.5.2"
-numba = "^0.52.0"
-dask = "^2021.1.1"
-jupyter = "^1.0.0"
-jupyterlab = "^3.0.5"
-dask-labextension = "^5.0.0"
-jupyterlab-lsp = "^3.2.0"
-python-language-server = {extras = ["all"], version = "^0.36.2"}
+# cytoolz = "^0.11.0"
+# pyarrow = "^2.0.0"
+# matplotlib = "^3.3.3"
+# fsspec = "^0.8.5"
+# s3fs = "^0.5.2"
+# numba = "^0.52.0"
+# dask = "^2021.1.1"
+# jupyter = "^1.0.0"
+# jupyterlab = "^3.0.5"
+# dask-labextension = "^5.0.0"
+# jupyterlab-lsp = "^3.2.0"
+# python-language-server = {extras = ["all"], version = "^0.36.2"}
 
 
 [build-system]
