--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
       - id: end-of-file-fixer
         exclude: ^tests/.*/fixtures/.*
       - id: check-yaml
+        exclude: ^forge/.*
       - id: check-added-large-files
       - id: pretty-format-json
         exclude: ^.vscode/.*
