--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "upoly"
-version = "0.1.32"
+version = "0.1.33"
 description = "High performance asyncio REST client for polygon.io"
 authors = ["Riley <rileymshea@gmail.com>"]
 license = "AGPL"
@@ -36,7 +36,7 @@ aiohttp = "^3.7.3"
 aiodns = "^2.0.0"
 Brotli = "^1.0.9"
 cchardet = "^2.1.7"
-setuptools = "^53.0.0"
+# setuptools = "^0.49.0"
 
 [tool.poetry.dev-dependencies]
 aiofiles = "^0.6.0"
@@ -66,7 +66,8 @@ pytest-mock = "^3.5.1"
 # dask-labextension = "^5.0.0"
 # jupyterlab-lsp = "^3.2.0"
 # python-language-server = {extras = ["all"], version = "^0.36.2"}
-
+grayskull = "^0.8.5"
+poetry2conda = "^0.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
